<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    style="@style/CollapsingToolbarLayout"
    android:fitsSystemWindows="false"
    android:gravity="bottom"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        style="@style/appBar"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            style="@style/CollapsingToolbarLayout"
            android:layout_height="@dimen/app_bar_height"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                style="@style/lyn_layout.head_image"
                android:background="@drawable/img_header"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6ff4444"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            style="@style/lyn_layout"
            android:fitsSystemWindows="false"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    style="@style/lyn_layout"
                    android:orientation="horizontal">

                    <LinearLayout style="@style/layout_point">

                        <Button
                            style="@style/lyn_layout.btn_style"
                            android:onClick="redPoint"
                            android:text="@string/btn_red" />

                        <TextView
                            android:id="@+id/team_r_score"
                            style="@style/lyn_layout.team_point"
                            android:text="@string/team_point" />

                        <Button
                            android:id="@+id/button"
                            style="@style/lyn_layout.btn_style"
                            android:onClick="setRedEnd"
                            android:text="@string/set_endr" />

                        <Button
                            style="@style/lyn_layout.btn_style"
                            android:onClick="takeOutRed"
                            android:text="@string/take_outr" />

                    </LinearLayout>

                    <View style="@style/view_point" />

                    <LinearLayout style="@style/layout_point">

                        <Button
                            android:id="@+id/button2"
                            style="@style/lyn_layout.btn_style"
                            android:onClick="yellowPoint"
                            android:text="@string/btn_yellow" />


                        <TextView
                            android:id="@+id/team_y_score"
                            style="@style/lyn_layout.team_point"
                            android:text="@string/team_point" />

                        <Button
                            style="@style/lyn_layout.btn_style"
                            android:onClick="setYellowEnd"
                            android:text="@string/set_endy" />

                        <Button
                            style="@style/lyn_layout.btn_style"
                            android:onClick="takeOutYellow"
                            android:text="@string/take_outy" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_marginBottom="@dimen/c_fbottom">

                <LinearLayout
                    style="@style/lyn_layout"
                    android:orientation="vertical">

                    <LinearLayout
                        style="@style/lyn_layout"
                        android:layout_margin="@dimen/c_fbottom"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/set_View_R"
                            style="@style/end_outs_row"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/team_point" />

                        <TextView
                            style="@style/end_outs_row"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/ends"
                            android:textAllCaps="true" />

                        <TextView
                            android:id="@+id/set_View_Y"
                            style="@style/end_outs_row"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/team_point" />

                    </LinearLayout>


                    <LinearLayout
                        style="@style/lyn_layout"
                        android:layout_margin="@dimen/c_fbottom"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/set_Out_R"
                            style="@style/end_outs_row"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/team_point" />

                        <TextView
                            style="@style/end_outs_row"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/outs"
                            android:textAllCaps="true" />

                        <TextView
                            android:id="@+id/set_Out_Y"
                            style="@style/end_outs_row"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/team_point" />

                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                style="@style/lyn_layout.btn_style"
                android:layout_margin="2dp"
                android:onClick="resetScore"
                android:text="@string/btn_reset" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>